--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://github.com/rui-2002/text-summarization/raw/main/samsum-dataset-text-summarization.zip
+  source_URL: https://raw.githubusercontent.com/rui-2002/text-summarization/main/samsum-dataset-text-summarization.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
